# optimize-my-roblos

./: .gitignore  README.md  b.bat  banner.sb3  package-lock.json  package.json  release.bat
advanced/something_something_gpu/: Cargo.toml
advanced/something_something_gpu/src/: main.rs
src/: browser.css  general.js  index.html  main.js  mainModule.js  styles.css
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: CAS_1975.json  CAS_lowspec.json  CAS_office.json  CAS_perf.json  CAS_studio.json  ClientAppMinimal.json  ClientAppMinimalNoVulkan.json  ClientAppSettings.json  ClientAppSettingsAlt.json  ClientAppVulkanVoxel.json  base (comments).jsonc  console.rs  main.rs  readme.txt  vinegar_config.toml
terrible-roblox-optimizer/: Cargo.toml  README.md
terrible-roblox-optimizer/src/: CAS_studio.json  base (comments).jsonc  lib.rs
test/: a.html
