[package]
name = "optimize_my_roblos"
edition = "2021"
version = "1.0.0"
authors = ["WilliamAnimate"]
description = "Optimize my Roblox!"
license = "MIT"
repository = "https://github.com/williamanimate/optimize-my-roblos/"

[dependencies.tauri]
version = "1.5"
features = [ "shell-open", "wry", "shell-open-api", "tauri-runtime-wry", "regex"]
default-features = false

[build-dependencies.tauri-build]
version = "1.5"
features = []

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package]
