[package]
name = "optimize_my_roblos"
edition = "2021"
version = "1.1.1-alpha.2"
authors = ["WilliamAnimate"]
description = "Optimize my Roblox!"
license = "MIT"
repository = "https://github.com/williamanimate/optimize-my-roblos/"

[dependencies]
lazy_static = "1.4.0"
winreg = "0.51.0"

[dependencies.tauri]
version = "1.5"
features = ["shell-open", "shell-open-api", "wry", "tauri-runtime-wry", "open"]
default-features = false

[build-dependencies.tauri-build]
version = "1.5"
features = []

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# compile quickly; if you need the good executable, just use the `idfk` profile
opt-level = 0
lto = false
codegen-units = 256
panic = "abort"
strip = false

[profile.idfk]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package]
