[package]
name = "terrible-roblox-optimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(unix)'.dependencies]
home = "0.5.9"

[target.'cfg(windows)'.dependencies] 
winreg = "0.51.0"
