[package]
name = "something_something_gpu"
edition = "2021"
version = "1.0.0"
authors = ["WilliamAnimate"]
description = "Advanced system-level modifications to try and make Roblox faster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
winreg = "0.51.0"
